@@ -1,3 +1,5 @@
+- detect KDE4 when configuring autologin
+
 Version 10.42 - 26 June 2008
 
 - fix reading rpm macros from /etc/macros.d/ (esp. %_filetriggers_dir)
