@@ -1,3 +1,5 @@
+- detect KDE4 when configuring autologin
+
 Version 10.39 - 25 June 2008
 
 - bootloader-config:
